kubernetes/auth/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-app
  template:
    metadata:
      labels:
        app: auth-app
    spec:
      containers:
      - name: auth-app
        image: reiounagata/aaw-marketplace-bebas-authentication:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "0.5"
            memory: "384Mi"
          limits:
            cpu: "1.0"
            memory: "774Mi"
