kubernetes/auth/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  type: NodePort  
  selector:
    app: auth-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 80
      nodePort: 30000
